fixed uneven margin

--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -38,7 +38,6 @@ h1 {
   color: #88c0d0;
 }
 ul li {
-  margin-left: 30px;
   list-style: none;
 }
 .questions-container {
